<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright 2017-2026 Open Text

    OpenText is a trademark of Open Text.
    The only warranties for products and services of Open Text and
    its affiliates and licensors ("Open Text") are as may be set forth
    in the express warranty statements accompanying such products and services.
    Nothing herein should be construed as constituting an additional warranty.
    Open Text shall not be liable for technical or editorial errors or
    omissions contained herein. The information contained herein is subject
    to change without notice.

    Except as specifically indicated otherwise, this document contains
    confidential information and a valid license is required for possession,
    use or copying. If this work is provided to the U.S. Government,
    consistent with FAR 12.211 and 12.212, Commercial Computer Software,
    Computer Software Documentation, and Technical Data for Commercial Items are
    licensed to the U.S. Government under vendor's standard commercial license.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<artifactId>java-sdk</artifactId>
		<groupId>com.hpe.adm.octane.ciplugins</groupId>
		<version>2.26.3-SNAPSHOT</version>
	</parent>

    <name>MicroFocus ALM Octane Common libraries for CI plugins DTO</name>
	<artifactId>integrations-dto</artifactId>

	<properties>
        <java.level>21</java.level>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.release>21</maven.compiler.release>
		<jackson.version>2.22.0</jackson.version>
        <junit-jupiter.version>6.1.0</junit-jupiter.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>${jackson.version}</version>
		</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>

	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<groupId>org.apache.maven.plugins</groupId>
					<configuration>
						<sourcepath>${basedir}/src/main/java/com/hp/octane/integrations/dto</sourcepath>
						<source>${java.level}</source>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>spotbugs-maven-plugin</artifactId>
					<groupId>com.github.spotbugs</groupId>
					<configuration>
						<excludeFilterFile>spotbugs-exclude.xml</excludeFilterFile>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>build-deployment</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<groupId>org.apache.maven.plugins</groupId>
                        <version>${maven-source-plugin.version}</version>
					</plugin>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<groupId>org.apache.maven.plugins</groupId>
						<configuration>
							<source>${java.level}</source>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-gpg-plugin</artifactId>
						<groupId>org.apache.maven.plugins</groupId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>